--- a/project/client/package.json
+++ b/project/client/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "dot": "^1.1.3",
     "dotenv": "^17.2.3",
+    "env": "^0.0.2",
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.0",
