--- a/project/client/package.json
+++ b/project/client/package.json
@@ -2,26 +2,15 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.12.2",
-    "bcryptjs": "^3.0.2",
-    "dot": "^1.1.3",
-    "dotenv": "^17.2.3",
-    "env": "^0.0.2",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
-    "mongodb": "^6.20.0",
-    "mongoose": "^8.19.0",
-    "nodemailer": "^7.0.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "swr": "^2.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -29,6 +18,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.14",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   },
   "eslintConfig": {
     "extends": [
@@ -47,11 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.14",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18"
   }
 }
