--- a/project/server/package.json
+++ b/project/server/package.json
@@ -13,6 +13,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
+    "morgan": "^1.10.1",
     "nodemailer": "^7.0.6"
   },
   "devDependencies": {
