--- a/project/client/package.json
+++ b/project/client/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://localhost:3000",
   "dependencies": {
     "axios": "^1.12.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
