--- a/project/client/package.json
+++ b/project/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "axiom": "^0.22.1",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
