--- a/project/client/package.json
+++ b/project/client/package.json
@@ -7,6 +7,7 @@
     "axiom": "^0.22.1",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
     "react": "18.3.1",
