--- a/project/client/package.json
+++ b/project/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@stripe/stripe-js": "^8.5.2",
     "axiom": "^0.22.1",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
@@ -14,6 +15,7 @@
     "react-dom": "18.3.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "stripe": "^20.0.0",
     "swr": "^2.3.6",
     "web-vitals": "^2.1.4"
   },
