--- a/project/server/package.json
+++ b/project/server/package.json
@@ -17,7 +17,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
-    "nodemailer": "^7.0.6"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
