--- a/project/server/package.json
+++ b/project/server/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.6",
+    "pdfkit": "^0.17.2",
     "stripe": "^20.0.0"
   },
   "devDependencies": {
