--- a/project/server/package.json
+++ b/project/server/package.json
@@ -14,12 +14,14 @@
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.6",
     "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "stripe": "^20.0.0"
   },
   "devDependencies": {
