--- a/project/client/package.json
+++ b/project/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
     "@stripe/stripe-js": "^8.5.2",
     "axiom": "^0.22.1",
     "axios": "^1.12.2",
